# fieldbridge

./: .env.example  .gitignore  CLAUDE.md  README.md  dbc.py  genpass.py  render.yaml  requirements.txt
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/: Dockerfile  Makefile  pyproject.toml  requirements.txt
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/app/: main.py
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/app/core/: auth.py  config.py  ingest.py  llm.py  seed.py  tenant.py
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/app/models/: __init__.py  bid_breakdown.py  bid_event.py  bid_result.py  contractor.py  ingest_log.py  llm_insight.py  pipeline_run.py  tenant.py  usage.py  user.py
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/app/modules/: __init__.py
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/app/modules/activity_feed/: __init__.py  router.py  schema.py  service.py
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/app/modules/bids/: __init__.py  insights.py  prompts.py  (+3 more)
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/scripts/: _schemas_snapshot.json  _summary.txt  capture_itd_fixtures.py  create_mart_tables.py  introspect_xlsx.py  migrate_market_intel_layer_ab.py  migrate_tenants_add_kind.py  run_ingest.py  run_itd_pipeline.py  run_napc_probe.py  summarize_schemas.py  vista_introspect.py
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/tests/: PROPOSED_CHANGES.md  conftest.py
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/tests/integration/: __init__.py  conftest.py  harness.py  test_harness_smoke.py  test_vendors_enrichment.py
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/tests/llm/: __init__.py  test_prompt_smoke.py
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/tests/safety/: __init__.py  test_no_fstring_sql.py
.claude/worktrees/agent-ab4a7cd07687a86f4/backend/tests/unit/: test_activity_feed_module.py  test_bids_insights.py  test_bids_module.py  test_bids_prompts.py  test_config.py  test_cost_coding_insights.py  test_cost_coding_module.py  test_cost_coding_prompts.py  test_equipment_module.py  test_executive_dashboard_module.py  test_fetcher.py  test_fleet_pnl_module.py  test_ingest.py  test_itd_bid_abstract_parser.py  test_itd_pipeline.py  test_jobs_insights.py  test_jobs_module.py  test_jobs_prompts.py  test_llm_core.py  test_market_intel_admin_endpoint.py  test_market_intel_registry.py  test_market_intel_schema_layer_ab.py  test_market_intel_service_queries.py  test_phase6_recommendations.py  test_predictive_maintenance_insights.py  test_predictive_maintenance_module.py  test_predictive_maintenance_prompts.py  test_productivity_ingest.py  test_productivity_module.py  test_proposals_insights.py  test_proposals_module.py  test_proposals_prompts.py  test_timecards_insights.py  test_timecards_module.py  test_timecards_prompts.py  test_vendors_module.py  test_work_orders_insights.py  test_work_orders_module.py  test_work_orders_prompts.py
(+868 files in other folders)
